<resources>
    <string name="app_name">Seccion_01</string>
    <string name="button_to_cycle">1. To life Cycle Events</string>
    <string name="button_to_click">2. To Click Events</string>
    <string name="button_to_android_extensions">3. To Kotlin Android Extensions</string>
    <string name="button_to_picasso">4. To Picasso</string>
    <string name="button_to_list_view">5. To List View</string>
    <string name="button_to_intents">6.To Intents</string>
    <string name="button_to_permissions">7. To Permissions</string>
    <string name="button_to_shared_preferences">8. To Shared Preferences</string>
    <string name="button_to_extensions_functions">9. To Extension Functions</string>

    <string name="button_click_xml">Click by XML</string>
    <string name="button_click_line">Click in Line</string>
    <string name="button_click_multi1">Multiple Buttons 1</string>
    <string name="button_click_multi2">Multiple Buttons 2</string>
    <string name="button_click_multi3">Multiple Buttons 3</string>

    <string name="button_by_id">Button By FindViewByID</string>
    <string name="button_by_kat">Button By kat</string>

    <string name="button_intent_extras">Intent With Extras</string>
    <string name="button_intent_flags">Intent With Flags</string>
    <string name="button_intent_object">Intent With Object</string>

    <string name="button_back">Go Back</string>
    <string name="button_take_picture">Take a Picture</string>
    
    <string name="preferences_name_hint">Type name here</string>
    <string name="preferences_age_hint">Type age here</string>
    <string name="preferences_button_save">Save</string>

    <string name="button_toast">Toast</string>
    <string name="button_snack_bar">SnackBar</string>
    <string name="button_load_url">Load Url</string>
    <string name="button_go_to_activity">Go To Activity</string>

    <string name="message_toast_ext_fun">Hello has hecho click en el button Toast</string>


</resources>
